2019/12/08 超雑chat機能を実装 socket.io完全に理解した

--- a/013/public/index.html
+++ b/013/public/index.html
@@ -7,6 +7,12 @@
 <title>canvas</title>
 </head>
 <body>
+  <form name="chatForm">
+    <input type="text" name="chats" id="chats" autocomplete="off" >
+    <button type="button" id="submitBtn">submit</button>
+  </form>
+  <p id="chatField"></p>
+
   <canvas id="canvas"></canvas>
   <script src="./index.js"></script>
   <script src="/socket.io/socket.io.js"></script>
