--- a/cssCheckStudy/002.html
+++ b/cssCheckStudy/002.html
@@ -6,13 +6,31 @@
   <style>
     .wrapper {
       display: grid;
-      grid-template-columns: 1fr 2fr 1fr;
+      /* grid-template-columns: 1fr 2fr 1fr; */
+      grid-template-columns: 3fr 3fr 3fr;
+      row-gap: 1em;
+      column-gap: 1em;
+      grid-auto-rows: minmax(100px, auto);
     }
+
+    .nested {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-auto-rows: 70px;
+      grid-gap: 1em;
+    }
+
     .wrapper > div:nth-child(odd) {
       background: #ddd;
     }
+
     .wrapper > div{
       background: #eee;
+      padding: 1em;
+    }
+
+    .nested > div{
+      border: #333 1px solid;
       padding: 1em;
     }
   </style>
@@ -23,7 +41,21 @@
       Lorem ipsum dolor sit.
     </div>
     <div>
-        Lorem ipsum dolor sit.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate et ex quas reprehenderit, dignissimos aperiam, sed dolorem nobis dolore temporibus perspiciatis similique ab debitis rerum harum accusamus eius quisquam, reiciendis autem ducimus. Dolorum, recusandae nobis pariatur velit voluptatem fugiat deserunt?
+    </div>
+    <div class="nested">
+      <div>Lorem</div>
+      <div>Lorem</div>
+      <div>Lorem</div>
+      <div>Lorem</div>
+      <div>Lorem</div>
+      <div>Lorem</div>
+      <div>Lorem</div>
+      <div>Lorem</div>
+      <div>Lorem</div>
+      <div>Lorem</div>
+      <div>Lorem</div>
+      <div>Lorem</div>
     </div>
     <div>
       Lorem ipsum dolor sit.
@@ -32,22 +64,22 @@
       Lorem ipsum dolor sit.
     </div>    
     <div>
-        Lorem ipsum dolor sit.
+      Lorem ipsum dolor sit.
     </div>
     <div>
       Lorem ipsum dolor sit.
     </div>
     <div>
-        Lorem ipsum dolor sit.
+      Lorem ipsum dolor sit.
     </div>
+    <div>
+      Lorem ipsum dolor sit.
+    </div>    
     <div>
       Lorem ipsum dolor sit.
     </div>    
     <div>
       Lorem ipsum dolor sit.
-    </div>    
-    <div>
-        Lorem ipsum dolor sit.
     </div>
   </div>
 </body>
