--- a/cssCheckStudy/003.html
+++ b/cssCheckStudy/003.html
@@ -6,18 +6,6 @@
   <style>
     .wrapper {
       display: grid;
-      /* grid-template-columns: 1fr 2fr 1fr; */
-      grid-template-columns: 3fr 3fr 3fr;
-      row-gap: 1em;
-      column-gap: 1em;
-      grid-auto-rows: minmax(100px, auto);
-    }
-
-    .nested {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-auto-rows: 70px;
-      grid-gap: 1em;
     }
 
     .wrapper > div:nth-child(odd) {
@@ -29,15 +17,15 @@
       padding: 1em;
     }
 
-    .nested > div{
-      border: #333 1px solid;
-      padding: 1em;
-    }
   </style>
 </head>
 <body>
   <div class="wrapper">
-    
-  </div>
+    <div class="box">Box 1</div>
+    <div class="box">Box 2</div>
+    <div class="box">Box 3</div>
+    <div class="box">Box 4</div>
+  </div><script src="index.js
+  "></script>
 </body>
 </html>
