--- a/cssCheckStudy/003.html
+++ b/cssCheckStudy/003.html
@@ -6,6 +6,10 @@
   <style>
     .wrapper {
       display: grid;
+      grid-template-columns: 1fr 2fr 1fr;
+      grid-auto-rows: minmax(100px, auto);
+      grid-gap: 1em;
+      justify-items: stretch;
     }
 
     .wrapper > div:nth-child(odd) {
@@ -17,15 +21,39 @@
       padding: 1em;
     }
 
+    .box1 {
+      /* align-self: start; */
+      grid-column: 1/3;
+      grid-row: 1/3;
+    }
+
+    .box2 {
+      /* align-self: end; */
+      grid-column: 3/3;
+      grid-row: 1/3;
+    }
+
+    .box3 {
+      /* justify-self: end; */
+      grid-column: 1;
+      grid-row: 2/4;
+      border: 1em solid white;
+      border-bottom: none;
+      border-left: none;
+    }
+
+    .box4 {
+      /* justify-self: end; */
+    grid-column: 4/2;
+    }
   </style>
 </head>
 <body>
   <div class="wrapper">
-    <div class="box">Box 1</div>
-    <div class="box">Box 2</div>
-    <div class="box">Box 3</div>
-    <div class="box">Box 4</div>
-  </div><script src="index.js
-  "></script>
+    <div class="box box1">Box 1</div>
+    <div class="box box2">Box 2</div>
+    <div class="box box3">Box 3</div>
+    <div class="box box4">Box 4</div>
+  </div>
 </body>
 </html>
