2019/12/11アルゴリズム最適化の勉強 こんなにも実行時間が変わるとは・・・"

--- a/015/index.html
+++ b/015/index.html
@@ -5,10 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>testClass</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="list"></div>
-  <canvas id="canvas"></canvas>
-  <script src="a.js"></script>
+  <div class="container">
+    <div class="tools" id="tools">
+      <div class="colors" id="colors">
+
+      </div>
+    </div>  
+    <canvas id="canvas"></canvas>
+  </div>
+  <script src="app.js"></script>
 </body>
 </html>
