--- a/191229-/003/index_voice.html
+++ b/191229-/003/index_voice.html
@@ -7,7 +7,8 @@
 	<title>音声認識</title>
 </head>
 <body>
-	<button id="speechBtn">speech</button>
+	<button id="startBtn">Start</button>
+	<button id="endBtn">End</button>
 	<h1 id="content"></h1>
 	<script src="voice.js"></script>
 </body>
