--- a/200116-/003/index.html
+++ b/200116-/003/index.html
@@ -4,10 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
-  <canvas id="canvas"></canvas>
+  <div class="container">
+    <div id="color">
+      <!-- <div class="color black"></div>
+      <div class="color red"></div>
+      <div class="color orange"></div>
+      <div class="color yellow"></div>
+      <div class="color green"></div>
+      <div class="color blue"></div> -->
+    </div>
+    <canvas id="canvas" class="canvas"></canvas>
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
