--- a/200116-/003/index.html
+++ b/200116-/003/index.html
@@ -10,12 +10,12 @@
 <body>
   <div class="container">
     <div id="color">
-      <!-- <div class="color black"></div>
+      <div class="color black"></div>
       <div class="color red"></div>
       <div class="color orange"></div>
       <div class="color yellow"></div>
       <div class="color green"></div>
-      <div class="color blue"></div> -->
+      <div class="color blue"></div>
     </div>
     <canvas id="canvas" class="canvas"></canvas>
   </div>
